# blindspot

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  test_gui_syntax.py
samples/: active.sh  convert.sh  curve.sh  detect.sh  gui_check.sh  scene_crop.sh  scene_median.sh  source_active.sh  source_compare_curve.sh  source_compensation.sh  source_convert.sh  source_curve.sh  source_detect.sh  source_mask.sh  source_view.sh  source_view_gui.sh  source_view_gui2.sh  view.sh
scripts/: active.py  convert.py  curve.py  gui_check.py  plot_wave_gui  scene_crop.py  scene_median.py  scene_video2img.py  source_active.py  source_compare_curve.py  source_compensation.py  source_convert.py  source_curve.py  source_detect.py  source_mask.py  source_view.py  source_view_gui.py  source_view_gui2.py  test.py  view.py
src/blindspot/: __init__.py  base.py  compensation.py  config.py  convert.py  detection.py  image.py  nuc.py  old.py  utils.py
src/blindspot.egg-info/: PKG-INFO  SOURCES.txt
