[project]
name = "blindspot"
version = "0.0.1"
description = "Detect and locate blind pixels in black-body infrared images"
readme = "README.md"
authors = [{name = "Charles", email = "charles.shht@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    'click',
    'numpy',
    'matplotlib',
    'cslib',
    'PySide6',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blindspot"]

